spacing issues

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -127,7 +127,7 @@
   }
 
   img {
-    max-width: 235px;
+    max-width: 230px;
     border-radius: 0%;
 
     @include breakpoint($large) {
